<resources>
    //Plan
    <string name="plan_name">Plan Name</string>
    <string name="plan_explanation">Plan Explanation</string>
    <string name="plan_category">Plan Category</string>

    //Action
    <string name="action_name">Action Name</string>
    <string name="action_explanation">Action Explanation</string>
    //General
    <string name="create">Create</string>
    <string name="turkish">Türkçe</string>
    <string name="english">English</string>
    <string name="languages">Languages</string>
    <string name="actions">Actions Page</string>
    <string name="plans">Plans Page</string>
    <string name="funcitons">Functions Page</string>
    <string name="settings">Settings Page</string>
    <string name="run">Run</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="done">Done</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="mail_subject">Subject</string>
    <string name="mail_message">Message</string>
    <string name="mail_message_to">Message To</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="title_activity_action">ActionActivity</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="update">Update</string>
    //Sms Function
    <string name="sms_subject">Subject</string>
    <string name="sms_message">Message</string>
    <string name="sms_message_to">SMS Number</string>
    <string name="title_activity_maps">Map</string>

</resources>
