<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mail_subject"/>
        <EditText
            android:id="@+id/function_mail_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mail_message_to"/>
        <EditText
            android:id="@+id/function_mail_message_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mail_message"/>
        <EditText
            android:id="@+id/function_mail_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="3">
            <EditText
                android:id="@+id/function_mail_date"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:enabled="false"
                />
            <Button
                android:id="@+id/dialog_function_btn_setDate"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/set"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="3">
            <EditText
                android:id="@+id/function_mail_time"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:enabled="false"
                />
            <Button
                android:id="@+id/dialog_function_btn_setTime"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/set"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             android:layout_weight="2">
            <Button
                android:id="@+id/dialog_function_btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/dialog_function_btn_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>