<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="15dp"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sms_message_to"
            android:textAllCaps="false"
            android:textStyle="bold|italic" />
        <EditText
            android:id="@+id/function_sms_message_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textvew_layout"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sms_message"
            android:textStyle="bold|italic"/>
        <EditText
            android:id="@+id/function_sms_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textvew_layout"
            android:minLines="2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textStyle="bold|italic"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="3">
            <EditText
                android:id="@+id/function_sms_date"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:background="@drawable/textvew_layout"
                android:enabled="false"
                />
            <Button
                android:id="@+id/dialog_function_btn_setDate"
                android:layout_weight="1"
                android:text="@string/set"
                android:shadowColor="#000000"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="10"
                android:textColor="#FFFFFF"
                android:textSize="12dp"
                android:background="@drawable/buttonshape"
                android:layout_height="20dp"
                android:layout_width="0dp"
                android:layout_marginLeft="3dp"
                android:layout_gravity="center"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textStyle="bold|italic"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="3">
            <EditText
                android:id="@+id/function_sms_time"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:background="@drawable/textvew_layout"
                android:enabled="false"
                />
            <Button
                android:id="@+id/dialog_function_btn_setTime"
                android:layout_weight="1"
                android:text="@string/set"
                android:shadowColor="#000000"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="10"
                android:textColor="#FFFFFF"
                android:textSize="12dp"
                android:background="@drawable/buttonshape"
                android:layout_height="20dp"
                android:layout_width="0dp"
                android:layout_marginLeft="3dp"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2">
            <Button
                android:id="@+id/dialog_function_btn_cancel"
                android:text="@string/cancel"
                android:layout_weight="1"
                android:shadowColor="#000000"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="10"
                android:textColor="#FFFFFF"
                android:textSize="12dp"
                android:background="@drawable/buttonshape"
                android:layout_height="25dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="5dp"
                android:layout_width="0dp"/>
            <Button
                android:id="@+id/dialog_function_btn_create"
                android:text="@string/create"
                android:layout_weight="1"
                android:shadowColor="#000000"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="10"
                android:textColor="#FFFFFF"
                android:textSize="12dp"
                android:background="@drawable/buttonshape"
                android:layout_height="25dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="5dp"
                android:layout_width="0dp"/>
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>