<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold|italic"
            android:text="@string/languages"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">
            <Button
                android:id="@+id/setting_btn_eng"
                android:layout_width="match_parent"
                android:text="@string/english"
                android:layout_weight="1"
                android:shadowColor="#000000"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="10"
                android:textColor="#FFFFFF"
                android:textSize="12dp"
                android:background="@drawable/buttonshape"
                android:layout_height="25dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="5dp"/>
            <Button
                android:id="@+id/setting_btn_tr"
                android:layout_width="match_parent"
                android:text="@string/turkish"
                android:layout_weight="1"
                android:shadowColor="#000000"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="10"
                android:textColor="#FFFFFF"
                android:textSize="12dp"
                android:background="@drawable/buttonshape"
                android:layout_height="25dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="5dp"/>
        </LinearLayout>
    </LinearLayout>
    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />
</android.support.constraint.ConstraintLayout>