<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/action_item_img"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginLeft="3dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="5dp">
                <TextView
                    android:id="@+id/action_item_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/action_item_exp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="12dp"
                    android:ellipsize="none"
                    android:scrollHorizontally="false"/>
                <TextView
                    android:id="@+id/action_item_remainTime"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="12dp"
                    android:ellipsize="none"
                    android:scrollHorizontally="false"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3">
            <Button
                android:id="@+id/action_item_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/action_item_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/action_item_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/done"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>